--- a/style.css
+++ b/style.css
@@ -1,1 +1,50 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@1,100&family=Roboto+Slab:wght@500&display=swap');
+
+body{
+    font-family: 'Roboto Mono', monospace;
+font-family: 'Roboto Slab', serif;
+}
+
+.container {
+    border: 2px solid black;
+    width: 95%;
+    height:100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.hex-colors{
+    border: 2px solid black;
+    text-align: center;
+}
+.hex-colors h1{
+    font-size: 2rem; /*1 rem is equivalent to 16 pixels*/
+    text-transform: uppercase;
+    animation:changecolor 5s infinite alternate;
+}
+.hex-colors h2{
+    border: 2px solid black;
+    font-size: 2rem;
+    margin-top: 15%;
+}
+
+@keyframes changecolor{
+    0%{
+        color:indigo;
+    }
+    20%{
+        color:blue;
+    }
+    40%{
+        color:green;
+    }
+    60%{
+        color:orange;
+    }
+    80%{
+        color:red;
+    }
+
+
+}
