--- a/style.css
+++ b/style.css
@@ -47,7 +47,12 @@ font-family: 'Roboto Slab', serif;
     }
 }
 @media(max-width:480px){
-    
+    .hex-colors h1{
+        font-size: 1.5rem;
+    }
+    .hex-colors h2{
+        font-size: 1.5rem;
+    }
 }
 
 
